fix: test case, simplify code and some mismatching case